--- a/src/application/view/login.fxml
+++ b/src/application/view/login.fxml
@@ -24,7 +24,7 @@
       </HBox>
       <HBox prefHeight="50.0" spacing="10.0">
          <children>
-            <Label prefWidth="60.0" text="Hasło:" />
+            <Label prefWidth="60.0" text="Password:" />
             <PasswordField fx:id="passwordField" />
          </children>
          <padding>
@@ -33,8 +33,8 @@
       </HBox>
       <HBox alignment="CENTER" spacing="20.0">
          <children>
-            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefWidth="100.0" styleClass="btn" stylesheets="@application.css" text="Zaloguj" />
-            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#close" prefWidth="100.0" styleClass="btn" stylesheets="@application.css" text="Anuluj" />
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#login" prefWidth="100.0" styleClass="btn" stylesheets="@application.css" text="Login" />
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#close" prefWidth="100.0" styleClass="btn" stylesheets="@application.css" text="Cancel" />
          </children>
          <padding>
             <Insets bottom="10.0" />
